# edevis

./: README.md  pyproject.toml
edevis/: hooks.py  modules.txt  patches.txt
edevis/custom_scripts/custom_python/: checkvat.py  customer.py  lead.py  opportunity.py  quote_methods.py
edevis/edevis/custom/: customer.json  lead.json  opportunity.json
edevis/edevis/doctype/pruefproblem/: pruefproblem.js  pruefproblem.json  pruefproblem.py  test_pruefproblem.py
edevis/edevis/doctype/vat_id_validation/: test_vat_id_validation.py  vat_id_validation.js  vat_id_validation.json  vat_id_validation.py
edevis/fixtures/: client_script.json  notification.json  print_format.json  role.json  translation.json  workflow.json  workflow_state.json
edevis/patches/v1_0/: add_custom_field_for_lead.py
edevis/public/js/: customer.js  lead.js  opportunity.js
